# logseq-spring-thing

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.dev  Dockerfile.production  Dockerfile.unified  LICENSE.MPL  MAINTAINERS.md  NOTICE  README.md  agentbox-prd-target.txt  agentdb.rvf  build.rs  config.yml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.unified-with-neo4j.yml  docker-compose.unified.yml  docker-compose.vircadia.yml  docker-compose.voice.yml  docker-compose.yml  dreamlab-ai-website  enterprise-feature-inventory.txt  infographic-prompt.md  infohero1.md  infohero2.md  infohero3.md  nginx.conf  nginx.dev.conf  nginx.production.conf  package-lock.json  package.json  solid-pod-rs  supervisord.dev.conf  supervisord.production.conf
client/crates/scene-effects/: Cargo.toml
client/crates/scene-effects/src/: lib.rs  mini_graph.rs
client/src/wasm/drawer-fx/: .gitignore  Cargo.toml  README.md  build.sh
crates/graph-cognition-core/: Cargo.toml
crates/graph-cognition-core/src/: edge_category.rs  edge_kind.rs  lib.rs  node_kind.rs  typed_graph.rs  validation.rs
crates/graph-cognition-extract/: Cargo.toml
crates/graph-cognition-extract/src/: lib.rs
crates/graph-cognition-extract/src/code/: extractor.rs  mod.rs  rust_extractor.rs
crates/graph-cognition-extract/src/logseq/: block_node.rs  block_parser.rs  mod.rs
crates/graph-cognition-physics-presets/: Cargo.toml
crates/graph-cognition-physics-presets/presets/: code_repo.toml  default.toml  edge-kinds.toml  logseq_large.toml  logseq_small.toml  research_wiki.toml
crates/graph-cognition-physics-presets/src/: lib.rs  preset.rs  registry_ext.rs
crates/solid-pod-rs/: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GAP-ANALYSIS.md  LICENSE-MIT  NOTICE  PARITY-CHECKLIST.md  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
crates/solid-pod-rs-git/: Cargo.toml  README.md
crates/solid-pod-rs-git/src/: lib.rs
crates/solid-pod-rs-idp/: Cargo.toml  README.md
crates/solid-pod-rs-idp/src/: lib.rs
crates/solid-pod-rs-nostr/: Cargo.toml  README.md
crates/solid-pod-rs-nostr/src/: lib.rs
crates/solid-pod-rs-server/: Cargo.toml  README.md
crates/solid-pod-rs-server/src/: main.rs
crates/solid-pod-rs/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/solid-pod-rs/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  parity_gap.yml
crates/solid-pod-rs/.github/workflows/: ci.yml  release.yml
crates/solid-pod-rs/benches/: dpop_replay_bench.rs  ldp_content_negotiation_bench.rs  nip98_verify_bench.rs  storage_backend_bench.rs  wac_eval_bench.rs
crates/solid-pod-rs/docs/: README.md  benchmarks.md  examples-index.md
crates/solid-pod-rs/docs/diagrams/: README.md
crates/solid-pod-rs/docs/reference/: api.md  (+9 more)
crates/solid-pod-rs/examples/: custom_storage.rs  embed_in_actix.rs  nip98_client.rs  notifications_consumer.rs  oidc_client.rs  wac_admin.rs  webhook_receiver.rs
crates/solid-pod-rs/src/: error.rs  interop.rs  ldp.rs  lib.rs  metrics.rs  notifications.rs  provision.rs  wac.rs  webid.rs
crates/solid-pod-rs/tests/: acl_origin_test.rs  config_test.rs  dpop_replay_test.rs  interop_jss.rs  legacy_notifications_test.rs  parity_close.rs  schnorr_nip98.rs  security_primitives_test.rs  storage_trait.rs  wac_basic.rs  wac_inheritance.rs
crates/visionclaw-contracts/: .gitignore  Cargo.toml  README.md  ts-rs.toml
crates/visionclaw-contracts/bindings/: ActionKind.ts  AgentActionEnvelope.ts  AgentRecord.ts  AgentRemovedPayload.ts  AgentStatus.ts  AgentTelemetryEvent.ts  DeltaPayload.ts  EnterpriseEventEnvelope.ts  ParseErrorKind.ts  ParseErrorReport.ts
crates/visionclaw-contracts/src/: agent_action.rs  enterprise.rs  github_adapter.rs  lib.rs  telemetry.rs  version.rs
crates/visionclaw-contracts/tests/: schema_stability.rs  ts_export.rs
crates/visionclaw-domain/: Cargo.toml
crates/visionclaw-domain/src/: analytics.rs  lib.rs
crates/visionclaw-xr-presence/: Cargo.toml
crates/visionclaw-xr-presence/benches/: baseline.json  wire.rs
crates/visionclaw-xr-presence/fuzz/: Cargo.toml
crates/visionclaw-xr-presence/proptest-regressions/: wire.txt
crates/visionclaw-xr-presence/src/: delta.rs  error.rs  lib.rs  room.rs  types.rs  validate.rs  wire.rs
crates/visionclaw-xr-presence/tests/: adversarial_tests.rs  integration.rs  property_tests.rs
crates/visionflow-actors/: Cargo.toml
crates/visionflow-actors/src/: lib.rs  protected_settings_actor.rs  supervisor.rs  voice_commands.rs
crates/visionflow-adapters/: Cargo.toml
crates/visionflow-adapters/src/: lib.rs  messages.rs  oxigraph_ontology_repository.rs  whelk_inference_engine.rs
crates/visionflow-domain/: Cargo.toml
crates/visionflow-domain/src/: lib.rs
crates/visionflow-gpu/: Cargo.toml  build.rs
crates/visionflow-gpu/src/: lib.rs  memory.rs  ptx_loader.rs
crates/visionflow-ontology/: Cargo.toml
crates/visionflow-ontology/src/: lib.rs
crates/visionflow-protocol/: Cargo.toml
crates/visionflow-protocol/src/: binary_protocol.rs  lib.rs
extraction/solid-pod-rs/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GAP-ANALYSIS.md  NOTICE  README.md
extraction/solid-pod-rs/examples/: standalone.rs
extraction/solid-pod-rs/src/: oidc.rs  webid.rs
extraction/solid-pod-rs/tests/: interop_jss.rs
multi-agent-docker/skills/echoloop/: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  SKILL.md  __main__.py  audio_capture.py  config.py  engine.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  transcriber.py  ui.py
xr-client/rust/: Cargo.toml
xr-client/rust/benches/: decode_throughput.rs
xr-client/rust/src/: binary_protocol.rs  interaction.rs  lib.rs  lod.rs  presence.rs  webrtc_audio.rs
xr-client/rust/tests/: binary_protocol_edge.rs  interaction_raycast.rs  lod_thresholds.rs  pose_wire_round_trip.rs  presence_handshake.rs  property_binary_protocol.rs  property_interaction.rs  property_lod.rs  visual_fixture.rs
(+2717 files in other folders)
