[package]
name = "webxr"
version = "0.1.0"
edition = "2021"
description = "A WebXR graph visualisation server with GPU-accelerated physics"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Web framework and WebSocket
actix-web = { version = "4.11.0", features = ["compress-zstd", "macros"] }
actix-cors = "0.7.1"
actix-files = "0.6"
actix = "0.13"
crossbeam-channel = "0.5"
actix-web-actors = "4.3"
tungstenite = "0.21.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# For TCP buffered I/O and advanced socket operations
bytes = "1.10.1"
socket2 = { version = "0.5", features = ["all"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
validator = { version = "0.18", features = ["derive"] }

# Database - Neo4j (sole database)
neo4rs = { version = "0.9.0-rc.8", features = ["unstable-serde-packstream-format"] }

# Database - Oxigraph + SQLite (Phase 11 persistence migration, ADR-11)
# Gated by `persistence-oxigraph` feature so the radical-rollback baseline
# still compiles without these deps. Cutover lands in a later phase.
oxigraph = { version = "0.4", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tokio-rusqlite = { version = "0.5", optional = true }

# Redis (optional distributed caching)
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"], optional = true }

# TypeScript type generation
specta = { version = "2.0.0-rc.22", features = ["derive", "export"] }
specta-typescript = "0.0.9"

# Configuration
config = { version = "0.15.15", features = ["toml"] }
dotenvy = "0.15.7"
toml = "0.9.5"

# Logging and Telemetry
log = "0.4"
env_logger = "0.11.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "chrono", "env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# Graph serialization
xml = "0.8"
blake3 = "1.5"
bcrypt = "0.15"

# GPU/Compute (always enabled)
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"
cudarc = { version = "0.12.1", features = ["driver", "cuda-12040"] }
cust = { version = "0.3.2" }
cust_core = { version = "0.1.1" }

# HTTP client and API
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
nostr-sdk = "0.43.0"

# OpenAPI/Swagger documentation
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# High-Performance Networking (QUIC/WebTransport)
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
fastwebsockets = { version = "0.8", features = ["upgrade"] }
postcard = { version = "1.1", features = ["alloc", "use-std"] }
http = "1.2"
hyper = { version = "1.6", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

# Utilities
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
static_assertions = "1.1"
base64 = "0.22.1"
rand = "0.8"
fastrand = "2.3"
regex = "1.11.2"
lazy_static = "1.5"
once_cell = "1.20"
sha1 = "0.10"
sha2 = "0.10"
# scopeguard = "1.2"  # Unused - removed during cleanup
url = "2.5"
flate2 = "1.0"
byteorder = "1.5"
urlencoding = "2.1"
dashmap = "6.1"
# heck = "0.5"  # Unused - removed during cleanup
lru = "0.12"
# path_abs = "0.5"  # Unused - removed during cleanup
ordered-float = "4.5.0"
notify = "6.1"  # File system watching for hot-reload

# Math/Linear Algebra (needed for GPU compute)
nalgebra = "0.34.0"

# Added from the code block
glam = "0.30.5"
sysinfo = "0.37.0"

# Parallel processing
rayon = "1.11.0"

# Hexagonal Architecture
hexser = { version = "0.4.7", features = ["full"] }

# Ontology Reasoning — git dep on jjohare/whelk-rs fork (always enabled).
# Pinned to commit 79a1ee2 ("Made compatible with latest horned-owl"). The
# fork carries horned-owl 1.x compatibility patches that INCATools/whelk-rs
# upstream may not yet have merged.
# TODO: switch to git = "https://github.com/INCATools/whelk-rs" once upstream
# lands the horned-owl 1.x compat (track via PR from the jjohare fork).
whelk = { git = "https://github.com/jjohare/whelk-rs", rev = "79a1ee21789add5a66faa0ec1a830c32dba9b539" }

# Ontology dependencies (always enabled)
# Note: Using 1.2.0 for ArcStr support (thread-safe string type)
horned-owl = { version = "1.2.0", features = ["remote"] }
horned-functional = { version = "0.4.0" }
# walkdir = { version = "2.4" }  # Unused - removed during cleanup
clap = { version = "4.5", features = ["derive"] }


[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
pretty_assertions = "1.4"
tempfile = "3.14"
actix-rt = "2.11.0"

# WASM Support for hybrid CPU-WASM/GPU SSSP
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

[build-dependencies]
tempfile = "3.14"

[features]
# GPU and ontology features for conditional compilation
# Enable by default for full system capabilities
default = ["gpu", "ontology"]
gpu = []  # GPU acceleration with CUDA kernels
ontology = []  # Ontology validation and reasoning
redis = ["dep:redis"]  # Enable Redis distributed caching

# --- Adapter-parity test harness (tests/adapter_parity/) ---
# Enable to run the Neo4j-backed parity runner. Requires a reachable Neo4j
# instance and the NEO4J_PASSWORD env var (or ALLOW_INSECURE_DEFAULTS=true).
test-neo4j = []

# Phase 11 persistence migration (ADR-11): pulls in Oxigraph (SPARQL 1.1
# triple/quad store) and SQLite via tokio-rusqlite for settings. Enabling
# this feature compiles the new `oxigraph_*` and `sqlite_settings_repository`
# adapters under `src/adapters/`. The legacy `neo4j_*` adapters remain
# present and continue to compile; cutover is a separate phase.
persistence-oxigraph = [
    "dep:oxigraph",
    "dep:rusqlite",
    "dep:tokio-rusqlite",
]

# `dev-auth` — Compile-time gate for development auth bypass surface.
# Per ADR-06 §D1+D2 and resolution T2 (docs/migration-sprint/_resolutions/T2-auth-gating.md),
# every auth-bypass branch is wrapped in
#     #[cfg(any(debug_assertions, feature = "dev-auth"))]
# so release binaries built WITHOUT this feature physically cannot honour
# `SETTINGS_AUTH_BYPASS`, `ALLOW_INSECURE_DEFAULTS`, `--allow-skip-auth`, or
# `Bearer dev-session-token`. The bypass code is absent from the binary — no
# env-var path exists to re-enable it. `scripts/launch.sh up dev` enables this
# feature; `up prod` and `cargo build --release` do not.
dev-auth = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true

[profile.dev]
opt-level = 1

[package.metadata.rust-version]
min = "1.75.0"

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"

[[bin]]
name = "sync_local"
path = "src/bin/sync_local.rs"

[[bin]]
name = "sync_github"
path = "src/bin/sync_github.rs"

# Data Sprint Phase D-2: JSON-LD validator CLI. Pre-commit hook
# (`scripts/pre-commit-validate.sh`) invokes this binary against
# staged markdown files. Exits 0 if no Error-severity issues, 1
# otherwise.
[[bin]]
name = "validate-md"
path = "src/bin/validate_md.rs"

# REMOVED: migrate_settings_to_neo4j binary - migration complete
# [[bin]]
# name = "migrate_settings_to_neo4j"
# path = "src/bin/migrate_settings_to_neo4j.rs"

