[package]
name = "graph-cognition-core"
version = "0.1.0"
edition = "2021"
description = "Core types for graph cognition: NodeKind, EdgeKind, EdgeCategory, typed graph schema (ADR-064)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
