[package]
name = "solid-pod-rs-server"
version = "0.3.0-alpha.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "Drop-in Solid Pod server binary. Wraps solid-pod-rs with actix-web and the F6 layered config loader (ADR-056 §D3)."
authors = [
    "VisionClaw contributors",
    "community-forum-rs contributors",
]
repository = "https://github.com/DreamLab-AI/VisionClaw"
keywords = ["solid", "pod", "server", "jss", "agpl"]
categories = ["web-programming::http-server", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "solid-pod-rs-server"
path = "src/main.rs"

[dependencies]
# Library core — the binary's sole non-transport dependency.
solid-pod-rs = { path = "../solid-pod-rs", features = ["fs-backend", "memory-backend", "config-loader", "legacy-notifications"] }

# HTTP transport.
actix-web = "4"

# Async runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }

# CLI parsing — clap derive.
clap = { version = "4", features = ["derive", "env"] }

# Request/response helpers.
bytes = "1"

# Tracing / logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error wiring.
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
